# capsule

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  TODO.md  Taskfile.yml  clippy.toml  lefthook.yml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  gha.yml  release.yml  renovate.yml  security.yml  tag.yml
.taskfiles/: template.yml
assets/vhs/: .gitignore  Dockerfile  readme-prompt.tape  run-demo.sh  setup-demo.sh
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: build_id.rs  cli.rs  connect.rs  daemon.rs  main.rs  preset.rs
crates/cli/src/daemon/: service.rs  status.rs
crates/cli/src/daemon/service/: launchd.rs  mod.rs  systemd.rs
crates/cli/tests/: e2e.rs  init.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  sealed.rs  test_utils.rs
crates/core/src/daemon/: accept.rs  cache.rs  listener.rs  mod.rs  parallel_tests.rs  prompt.rs  request.rs  session.rs  stats.rs  test_support.rs
crates/core/src/daemon/request/: mod.rs  pipeline.rs
crates/core/src/init/: init.zsh  mod.rs  zsh.rs
crates/core/src/module/: character.rs  cmd_duration.rs  custom.rs  directory.rs  git.rs  mod.rs  status.rs  time.rs  toolchain.rs
crates/core/src/module/custom/: builtins.rs  compile.rs  detect.rs  facts.rs
crates/core/src/render/: layout.rs  mod.rs  segment.rs  style.rs
crates/prompt-bench/: Cargo.toml
crates/prompt-bench/src/: lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  generation.rs  lib.rs  message.rs  netstring.rs
crates/sys/: Cargo.toml
crates/sys/src/: lib.rs  linux.rs  macos.rs
docker/: linux-ci.Dockerfile
docs/: architecture.md  benchmarking.md  coding.md  review.md  testing.md  tooling.md
docs/adr/: launchd-daemon-management.md  protocol-aware-connect.md
src/: main.rs
tools/: prompt_bench.py  test_prompt_bench.py
