[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/shuymn/capsule"
readme = "README.md"
keywords = ["prompt", "zsh", "macos"]
categories = ["command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# Deny footguns and half-finished code paths
dbg_macro = "deny"
expect_used = "deny"
infinite_loop = "deny"
map_err_ignore = "deny"
panic = "deny"
str_to_string = "deny"
implicit_clone = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

# Stricter API / docs hygiene (warnings promoted to errors via -D warnings in task lint)
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "signal", "sync", "time", "process", "macros"] }
time = { version = "0.3", features = ["local-offset"] }
regex-lite = "0.1"
tempfile = "3"
anstyle = "1"
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
