[package]
name = "capsule-cli"
description = "macOS zsh prompt engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
capsule-core = { path = "../core" }
clap.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
capsule-protocol = { path = "../protocol" }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
