[package]
name = "capsule-core"
description = "Core library for capsule prompt engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish = false

[dependencies]
capsule-protocol = { path = "../protocol" }
capsule-sys = { path = "../sys" }
anstyle = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
