[package]
name = "capsule-prompt-bench"
description = "Benchmark harness comparing capsule daemon latency to starship"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "prompt-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
capsule-protocol = { path = "../protocol" }
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
