[package]
name = "capsule-protocol"
description = "Wire protocol for capsule prompt engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish = false

[lints]
workspace = true
